--- a/index.html
+++ b/index.html
@@ -3,40 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latihan Reading Comprehension - 40 Soal</title>
+    <title>Latihan Reading Korea - 40 Soal</title>
     <style>
-        /* Style sama seperti sebelumnya, aku ringkas biar nggak panjang */
         body { font-family: 'Segoe UI', Arial, sans-serif; background: linear-gradient(135deg, #e8eaf6, #c5cae9); margin: 0; padding: 0; color: #333; min-height: 100vh; }
         .container { max-width: 900px; margin: 20px auto; padding: 20px; background: white; box-shadow: 0 8px 32px rgba(0,0,0,0.15); border-radius: 16px; }
-        h1 { text-align: center; color: #1a237e; }
-        /* ... (style lainnya copy dari versi sebelumnya) ... */
+        h1 { text-align: center; color: #1a237e; margin-bottom: 10px; }
+        .login-box, #quiz-container { display: none; }
+        .login-box.active, #quiz-container.active { display: block; }
+        input { padding: 16px; margin: 12px 0; width: 100%; box-sizing: border-box; border-radius: 12px; border: 2px solid #bbb; font-size: 1.1em; }
+        input:focus { border-color: #3f51b5; outline: none; }
+        #kode { text-transform: uppercase; }
+        button { padding: 16px; margin: 10px 0; width: 100%; background: #3f51b5; color: white; border: none; border-radius: 12px; font-size: 1.2em; font-weight: bold; cursor: pointer; }
+        button:hover { background: #283593; }
+        button.submit-btn { background: #d50000; }
+        button.submit-btn:hover { background: #b71c1c; }
+        button.review-btn { background: #388e3c; }
+        button.review-btn:hover { background: #2e7d32; }
+        .timer { text-align: center; font-size: 2em; font-weight: bold; color: #d50000; margin: 20px 0; background: #ffebee; padding: 15px; border-radius: 12px; }
+        .progress { height: 28px; background: #c5cae9; border-radius: 14px; margin: 20px 0; overflow: hidden; }
+        .progress-bar { height: 100%; background: #3f51b5; width: 0%; border-radius: 14px; transition: width 0.5s ease; }
+        .question { display: none; padding: 30px; background: #e8eaf6; border-radius: 16px; margin-bottom: 25px; border: 2px solid #c5cae9; }
+        .question.active { display: block; }
+        .question img { max-width: 100%; border-radius: 16px; margin: 20px 0; box-shadow: 0 6px 20px rgba(0,0,0,0.15); }
+        .question audio { width: 100%; margin: 20px 0; }
+        .options label { display: block; padding: 18px; margin: 12px 0; background: #e3f2fd; border-radius: 12px; cursor: pointer; font-size: 1.2em; }
+        .options label:hover { background: #bbdefb; transform: translateY(-2px); }
+        .options input[type="radio"] { transform: scale(1.6); margin-right: 16px; }
+        .correct { background: #c8e6c9 !important; border: 3px solid #4caf50; }
+        .wrong { background: #ffcdd2 !important; border: 3px solid #f44336; }
+        .unanswered { background: #fff9c4 !important; border: 3px solid #ffeb3b; }
+        .correct-answer { font-weight: bold; color: #2e7d32; }
+        #result { text-align: center; font-size: 1.9em; margin: 60px 0; display: none; background: #e8f5e9; padding: 40px; border-radius: 16px; border: 3px solid #4caf50; }
+        #loading { text-align: center; font-size: 1.4em; color: #1a237e; margin: 50px 0; font-weight: bold; }
+        .nav-buttons { display: flex; justify-content: space-between; margin-top: 40px; flex-wrap: wrap; gap: 10px; }
         .footer { text-align: center; margin-top: 60px; padding: 20px; color: #555; font-size: 0.95em; border-top: 1px solid #ddd; }
         .footer strong { color: #1a237e; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Latihan Reading Comprehension</h1>
+        <h1>Latihan Reading Korea</h1>
         <p style="text-align:center; color:#555; font-style:italic;">40 Soal Pilihan Ganda | Waktu: 50 Menit</p>
 
-        <!-- Login Page -->
+        <!-- Login dengan 3 kolom langsung -->
         <div id="login-box" class="login-box active">
-            <h2>🔐 Masuk untuk Mulai Latihan</h2>
-            <input type="text" id="username" placeholder="Username (contoh: siswa)">
-            <input type="password" id="password" placeholder="Password (contoh: latihan)">
-            <input type="text" id="kode" placeholder="Kode Paket Soal (misal: K98345)" style="text-transform:uppercase;">
-            <button onclick="login()">Mulai Latihan</button>
-            <p style="text-align:center; color:#666; margin-top:25px;">
-                Soal diambil langsung dari GitHub repo kamu!<br>
-                Contoh kode: <strong>K98345</strong>
-            </p>
+            <h2>🔐 Masuk ke Latihan</h2>
+            <input type="text" id="username" placeholder="Username">
+            <input type="password" id="password" placeholder="Password">
+            <input type="text" id="kode" placeholder="Kode Soal" maxlength="6">
+            <button onclick="login()">Login & Mulai</button>
         </div>
 
         <!-- Quiz Area -->
         <div id="quiz-container">
             <div class="timer" id="timer">Waktu Tersisa: 50:00</div>
             <div class="progress"><div class="progress-bar" id="progress"></div></div>
-            <div id="loading">Memuat soal dari GitHub... sabar ya bro 😎</div>
+            <div id="loading">Memuat soal... sabar ya bro 😎</div>
             
             <form id="quiz-form"></form>
 
@@ -52,22 +74,29 @@
             </div>
         </div>
 
-        <!-- Copyright -->
         <div class="footer">
-            © 2026 <strong>Denzuka - KimJongUn</strong><br>
-            All Rights Reserved. Soal dari <a href="https://github.com/airnetcso/latbakor" target="_blank">GitHub airnetcso/latbakor</a>
+            © 2026 <strong>Denzuka - KimJongUn</strong><br>All Rights Reserved.
         </div>
     </div>
 
     <script>
-        // KONFIGURASI
-        const validUsers = { username: "siswa", password: "latihan" };
-        
-        // Mapping kode paket → nama subfolder di repo GitHub (atau langsung file)
-        const paketMapping = {
-            "K98345": "K98345",  // folder paket/K98345/soala.json atau soal1.json dst
-            "D31187": "D31187",
-            "Z997621": "Z997621"
+        // Validasi kombinasi username + password + kode soal
+        const validCredentials = {
+            "denzuka1":  { pass: "denzu123", kode: "B65533" },
+            "kimjong2":  { pass: "kimju456", kode: "A09008" },
+            "siswa01":   { pass: "tryout26", kode: "W11765" },
+            "koreafan":  { pass: "hanguk789", kode: "B65533" },
+            "topik2026": { pass: "seoul2026", kode: "H66633" }
+            // Tambah user baru di sini: "username_baru": { pass: "passnya", kode: "KODEBARU" }
+        };
+
+        // Mapping kode soal ke file di GitHub
+        const kodeMapping = {
+            "B65533": "soal1.json",
+            "A09008": "soal2.json",
+            "W11765": "soal3.json",
+            "H66633": "soal4.json"
+            // Tambah sesuai file yang kamu upload
         };
 
         const GITHUB_RAW_BASE = "https://raw.githubusercontent.com/airnetcso/latbakor/main/soal";
@@ -75,47 +104,101 @@
         const totalQuestions = 40;
         const timeLimit = 50 * 60;
         let questions = [];
-        let userAnswers = [];
+        let userAnswers = Array(totalQuestions).fill(null);
         let current = 0;
         let timerInterval;
         let timeLeft = timeLimit;
-        let currentPaket = "";
+        let currentFile = "";
         let currentUsername = "";
-        let currentKode = "";
         let isSubmitted = false;
         let isReviewMode = false;
 
-        // ... (fungsi login, startTimer, renderQuestions, showQuestion, submitQuiz, review sama seperti versi sebelumnya)
+        function login() {
+            const user = document.getElementById('username').value.trim();
+            const pass = document.getElementById('password').value;
+            const kode = document.getElementById('kode').value.trim().toUpperCase();
+
+            if (validCredentials[user] &&
+                validCredentials[user].pass === pass &&
+                validCredentials[user].kode === kode &&
+                kodeMapping[kode]) {
+
+                currentUsername = user;
+                currentFile = kodeMapping[kode];
+
+                document.getElementById('login-box').classList.remove('active');
+                document.getElementById('quiz-container').classList.add('active');
+                document.getElementById('loading').textContent = `Memuat paket ${kode}...`;
+
+                startTimer();
+                loadQuestions();
+            } else {
+                alert("Username, Password, atau Kode Soal salah. Coba lagi atau hubungi admin.");
+            }
+        }
+
+        function startTimer() {
+            timerInterval = setInterval(() => {
+                timeLeft--;
+                const mins = String(Math.floor(timeLeft / 60)).padStart(2, '0');
+                const secs = String(timeLeft % 60).padStart(2, '0');
+                document.getElementById('timer').textContent = `Waktu Tersisa: ${mins}:${secs}`;
+
+                if (timeLeft <= 120) document.getElementById('timer').style.background = '#ffcdd2';
+
+                if (timeLeft <= 0 && !isSubmitted) {
+                    clearInterval(timerInterval);
+                    submitQuiz(true);
+                }
+            }, 1000);
+        }
 
         async function loadQuestions() {
-            questions = [];
-            userAnswers = Array(totalQuestions).fill(null);
-
-            // OPSI 1: Satu file array (rekomendasi, mudah maintain)
             try {
-                const res = await fetch(`${GITHUB_RAW_BASE}/${currentPaket}/soala.json?t=${Date.now()}`);
+                const res = await fetch(`${GITHUB_RAW_BASE}/${currentFile}?t=${Date.now()}`);
                 questions = await res.json();
                 if (questions.length !== totalQuestions) throw new Error();
             } catch (err) {
-                // OPSI 2: Kalau file terpisah soal1.json sampai soal40.json
-                for (let i = 1; i <= totalQuestions; i++) {
-                    try {
-                        const res = await fetch(`${GITHUB_RAW_BASE}/${currentPaket}/soal${i}.json?t=${Date.now()}`);
-                        const data = await res.json();
-                        questions.push(data);
-                    } catch (e) {
-                        questions.push({ passage: "Soal tidak ditemukan", question: "Lanjut saja", options: {A:"A",B:"B",C:"C",D:"D"}, correct: "B" });
-                    }
-                }
+                alert("Gagal load soal dari GitHub. Cek internet atau hubungi admin.");
+                return;
             }
-
             renderQuestions();
             document.getElementById('loading').style.display = 'none';
             showQuestion(0);
         }
 
-        // Sisanya script sama seperti versi sebelumnya (render, review, dll)
-        // (Aku nggak paste ulang biar nggak panjang, copy dari versi sebelumnya ya bro)
+        // Fungsi renderQuestions, showQuestion, submitQuiz, review dll tetap sama seperti sebelumnya
+        // (copy dari versi terakhir ya bro)
+
+        // Contoh singkat renderQuestions (tambahkan audio & image support)
+        function renderQuestions() {
+            const form = document.getElementById('quiz-form');
+            form.innerHTML = '';
+            questions.forEach((q, i) => {
+                const div = document.createElement('div');
+                div.className = 'question';
+                let html = `<p><strong>Passage ${i+1}:</strong><br>${q.passage}</p>`;
+                if (q.audio) html += `<audio controls><source src="${q.audio}" type="audio/mpeg">Browser tidak support audio.</audio><br>`;
+                if (q.image) html += `<img src="${q.image}" alt="Gambar ${i+1}" loading="lazy">`;
+                html += `<p><strong>Pertanyaan ${i+1}:</strong><br>${q.question}</p><div class="options">`;
+                for (const [key, val] of Object.entries(q.options)) {
+                    html += `<label><input type="radio" name="q${i+1}" value="${key}" ${isReviewMode ? 'disabled' : ''}> ${key}. ${val}</label>`;
+                }
+                html += `</div>`;
+                div.innerHTML = html;
+                form.appendChild(div);
+
+                // Event jawaban
+                div.querySelectorAll('input[type="radio"]').forEach(radio => {
+                    radio.addEventListener('change', () => {
+                        userAnswers[i] = radio.value;
+                        if (isReviewMode) applyReviewHighlight(i);
+                    });
+                });
+            });
+        }
+
+        // ... sisanya sama
     </script>
 </body>
 </html>
