--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     <script>
         // Validasi kombinasi username + password + kode soal
         const validCredentials = {
-            "denzuka1":  { pass: "denzu123", kode: "B65533" },
-            "kimjong2":  { pass: "kimju456", kode: "A09008" },
-            "siswa01":   { pass: "tryout26", kode: "W11765" },
-            "koreafan":  { pass: "hanguk789", kode: "B65533" },
-            "topik2026": { pass: "seoul2026", kode: "H66633" }
+            "uus":  { pass: "123" },
+            "kimjong2":  { pass: "kimju456" },
+            "siswa01":   { pass: "tryout26" },
+            "koreafan":  { pass: "hanguk789" },
+            "topik2026": { pass: "seoul2026" }
             // Tambah user baru di sini: "username_baru": { pass: "passnya", kode: "KODEBARU" }
         };
 
@@ -202,3 +202,4 @@
     </script>
 </body>
 </html>
+
