--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
     <script>
         // Validasi kombinasi username + password + kode soal
         const validCredentials = {
-            "uus":  { pass: "123" },
-            "kimjong2":  { pass: "kimju456" },
-            "siswa01":   { pass: "tryout26" },
-            "koreafan":  { pass: "hanguk789" },
-            "topik2026": { pass: "seoul2026" }
-            // Tambah user baru di sini: "username_baru": { pass: "passnya", kode: "KODEBARU" }
+        "uus":       { pass: "123" },
+        "kimjong2":  { pass: "kimju456" },
+        "siswa01":   { pass: "tryout26" },
+        "koreafan":  { pass: "hanguk789" },
+        "topik2026": { pass: "seoul2026" }
+        // Tambah user baru: "nama": { pass: "passwordnya" }
         };
 
         // Mapping kode soal ke file di GitHub
@@ -202,5 +202,6 @@
     </script>
 </body>
 </html>
+
 
 
