--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>Latihan Reading Korea</h1>
         <p style="text-align:center; color:#555; font-style:italic;">40 Soal Pilihan Ganda | Waktu: 50 Menit</p>
 
-        <!-- Login dengan 3 kolom langsung -->
+        <!-- Login 3 kolom -->
         <div id="login-box" class="login-box active">
             <h2>🔐 Masuk ke Latihan</h2>
             <input type="text" id="username" placeholder="Username">
@@ -80,23 +80,23 @@
     </div>
 
     <script>
-        // Validasi kombinasi username + password + kode soal
+        // Daftar user valid (username + password)
         const validCredentials = {
-        "uus":       { pass: "123" },
-        "kimjong2":  { pass: "kimju456" },
-        "siswa01":   { pass: "tryout26" },
-        "koreafan":  { pass: "hanguk789" },
-        "topik2026": { pass: "seoul2026" }
-        // Tambah user baru: "nama": { pass: "passwordnya" }
+            "uus":       { pass: "123" },
+            "kimjong2":  { pass: "kimju456" },
+            "siswa01":   { pass: "tryout26" },
+            "koreafan":  { pass: "hanguk789" },
+            "topik2026": { pass: "seoul2026" }
+            // Tambah user baru: "nama": { pass: "passwordnya" }
         };
 
-        // Mapping kode soal ke file di GitHub
+        // Mapping kode soal → file JSON di GitHub
         const kodeMapping = {
             "B12345": "soal1.json",
             "A09008": "soal2.json",
             "W11765": "soal3.json",
             "H66633": "soal4.json"
-            // Tambah sesuai file yang kamu upload
+            // Tambah kode baru sesuai file soal yang kamu upload
         };
 
         const GITHUB_RAW_BASE = "https://raw.githubusercontent.com/airnetcso/latbakor/main/soal";
@@ -115,12 +115,11 @@
 
         function login() {
             const user = document.getElementById('username').value.trim();
-            const pass = document.getElementById('password').value;
+            const pass = document.getElementById('password').value.trim();
             const kode = document.getElementById('kode').value.trim().toUpperCase();
 
-            if (validCredentials[user] &&
-                validCredentials[user].pass === pass &&
-                validCredentials[user].kode === kode &&
+            if (validCredentials[user] && 
+                validCredentials[user].pass === pass && 
                 kodeMapping[kode]) {
 
                 currentUsername = user;
@@ -133,7 +132,7 @@
                 startTimer();
                 loadQuestions();
             } else {
-                alert("Username, Password, atau Kode Soal salah. Coba lagi atau hubungi admin.");
+                alert("Username, Password, atau Kode Soal salah bro!\n\nCek lagi:\n- Username huruf kecil\n- Kode Soal huruf besar tanpa spasi\n- Hubungi admin kalau lupa");
             }
         }
 
@@ -144,7 +143,9 @@
                 const secs = String(timeLeft % 60).padStart(2, '0');
                 document.getElementById('timer').textContent = `Waktu Tersisa: ${mins}:${secs}`;
 
-                if (timeLeft <= 120) document.getElementById('timer').style.background = '#ffcdd2';
+                if (timeLeft <= 120) {
+                    document.getElementById('timer').style.background = '#ffcdd2';
+                }
 
                 if (timeLeft <= 0 && !isSubmitted) {
                     clearInterval(timerInterval);
@@ -156,10 +157,11 @@
         async function loadQuestions() {
             try {
                 const res = await fetch(`${GITHUB_RAW_BASE}/${currentFile}?t=${Date.now()}`);
+                if (!res.ok) throw new Error();
                 questions = await res.json();
-                if (questions.length !== totalQuestions) throw new Error();
+                if (questions.length !== totalQuestions) throw new Error("Jumlah soal bukan 40");
             } catch (err) {
-                alert("Gagal load soal dari GitHub. Cek internet atau hubungi admin.");
+                alert("Gagal load soal dari GitHub!\n- Cek internet\n- Pastikan file " + currentFile + " ada di repo");
                 return;
             }
             renderQuestions();
@@ -167,10 +169,6 @@
             showQuestion(0);
         }
 
-        // Fungsi renderQuestions, showQuestion, submitQuiz, review dll tetap sama seperti sebelumnya
-        // (copy dari versi terakhir ya bro)
-
-        // Contoh singkat renderQuestions (tambahkan audio & image support)
         function renderQuestions() {
             const form = document.getElementById('quiz-form');
             form.innerHTML = '';
@@ -178,8 +176,12 @@
                 const div = document.createElement('div');
                 div.className = 'question';
                 let html = `<p><strong>Passage ${i+1}:</strong><br>${q.passage}</p>`;
-                if (q.audio) html += `<audio controls><source src="${q.audio}" type="audio/mpeg">Browser tidak support audio.</audio><br>`;
-                if (q.image) html += `<img src="${q.image}" alt="Gambar ${i+1}" loading="lazy">`;
+                if (q.audio) {
+                    html += `<audio controls style="width:100%; margin:20px 0;"><source src="${q.audio}" type="audio/mpeg">Browser tidak support audio.</audio>`;
+                }
+                if (q.image) {
+                    html += `<img src="${q.image}" alt="Gambar soal ${i+1}" loading="lazy">`;
+                }
                 html += `<p><strong>Pertanyaan ${i+1}:</strong><br>${q.question}</p><div class="options">`;
                 for (const [key, val] of Object.entries(q.options)) {
                     html += `<label><input type="radio" name="q${i+1}" value="${key}" ${isReviewMode ? 'disabled' : ''}> ${key}. ${val}</label>`;
@@ -188,7 +190,6 @@
                 div.innerHTML = html;
                 form.appendChild(div);
 
-                // Event jawaban
                 div.querySelectorAll('input[type="radio"]').forEach(radio => {
                     radio.addEventListener('change', () => {
                         userAnswers[i] = radio.value;
@@ -198,10 +199,103 @@
             });
         }
 
-        // ... sisanya sama
+        function showQuestion(n) {
+            document.querySelectorAll('.question').forEach((q, i) => q.classList.toggle('active', i === n));
+            document.getElementById('prev').disabled = n === 0;
+            document.getElementById('next').disabled = n === totalQuestions - 1;
+            document.getElementById('progress').style.width = ((n + 1) / totalQuestions * 100) + '%';
+            current = n;
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+
+            if (isReviewMode) applyReviewHighlight(n);
+        }
+
+        document.getElementById('next').onclick = () => { if (current < totalQuestions - 1) showQuestion(current + 1); };
+        document.getElementById('prev').onclick = () => { if (current > 0) showQuestion(current - 1); };
+        document.getElementById('submit').onclick = () => {
+            if (confirm("Yakin submit sekarang? Jawaban tidak bisa diubah lagi.")) {
+                submitQuiz(false);
+            }
+        };
+
+        function submitQuiz(timeUp = false) {
+            if (isSubmitted) return;
+            isSubmitted = true;
+            clearInterval(timerInterval);
+
+            let score = 0;
+            questions.forEach((q, i) => {
+                if (userAnswers[i] === q.correct) score++;
+            });
+
+            const percent = Math.round(score / totalQuestions * 100);
+            let message = timeUp ? "<strong>⏰ Waktu Habis!</strong><br><br>" : "<strong>🎉 Selesai!</strong><br><br>";
+            message += `Skor: <strong>${score}/${totalQuestions} (${percent}%)</strong><br><br>`;
+
+            if (percent >= 90) message += "Jenius bro! 🌟";
+            else if (percent >= 80) message += "Mantap sekali! 🔥";
+            else if (percent >= 70) message += "Bagus! Tingkatkan lagi 💪";
+            else if (percent >= 60) message += "Lumayan! Terus latihan 📈";
+            else message += "Jangan menyerah! Belajar lagi yuk 🚀";
+
+            document.getElementById('result').innerHTML = message;
+            document.getElementById('result').style.display = 'block';
+            document.getElementById('timer').style.display = 'none';
+            document.querySelector('.nav-buttons').style.display = 'none';
+            document.getElementById('review-btn-container').style.display = 'block';
+
+            // Simpan hasil ke localStorage
+            const hasil = {
+                username: currentUsername,
+                kode: document.getElementById('kode').value.trim().toUpperCase(),
+                skor: score,
+                total: totalQuestions,
+                persentase: percent,
+                waktuHabis: timeUp,
+                tanggal: new Date().toLocaleDateString('id-ID'),
+                jam: new Date().toLocaleTimeString('id-ID', {hour: '2-digit', minute:'2-digit'}),
+                timestamp: Date.now()
+            };
+
+            let semuaHasil = JSON.parse(localStorage.getItem('hasilLatihanReading') || '[]');
+            semuaHasil.push(hasil);
+            localStorage.setItem('hasilLatihanReading', JSON.stringify(semuaHasil));
+        }
+
+        function startReview() {
+            isReviewMode = true;
+            document.getElementById('review-btn-container').style.display = 'none';
+            document.querySelector('.nav-buttons').style.display = 'flex';
+            document.getElementById('submit').style.display = 'none';
+
+            questions.forEach((_, i) => applyReviewHighlight(i));
+            alert("Mode Review!\nHijau = Benar\nMerah = Salah\nKuning = Kosong\nJawaban benar ditebalkan.");
+        }
+
+        function applyReviewHighlight(index) {
+            const questionDiv = document.querySelectorAll('.question')[index];
+            const labels = questionDiv.querySelectorAll('.options label');
+            const correctKey = questions[index].correct;
+            const userAnswer = userAnswers[index];
+
+            labels.forEach(label => {
+                const input = label.querySelector('input');
+                const key = input.value;
+
+                label.classList.remove('correct', 'wrong', 'unanswered', 'correct-answer');
+
+                if (key === correctKey) label.classList.add('correct-answer');
+
+                if (userAnswer === null) {
+                    questionDiv.classList.add('unanswered');
+                } else if (userAnswer === correctKey) {
+                    if (key === userAnswer) label.classList.add('correct');
+                } else {
+                    if (key === userAnswer) label.classList.add('wrong');
+                    if (key === correctKey) label.classList.add('correct');
+                }
+            });
+        }
     </script>
 </body>
 </html>
-
-
-
